@@ -1,3 +1,9 @@
+2002-01-23  Per Bothner  <per@bothner.com>
+
+	* ReaderParens.java (readList):  Use Lexer's new eofError method.
+
+	* ScmRead.java:  Remove some unused import declarations.
+
 2002-01-13  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (readSpecial):  Skip Unix script header #!/PROGRAM.
